# BudsLink

./: .gitignore  README.md  io.github.maniacx.BudsLink.yml  meson.build  script.js  update-translation.sh
.github/workflows/: release-flatpak.yml
data/: io.github.maniacx.BudsLink.data.gresource.xml  io.github.maniacx.BudsLink.desktop  io.github.maniacx.BudsLink.gschema.xml  io.github.maniacx.BudsLink.metainfo.xml  io.github.maniacx.BudsLink.service  meson.build
locale/en_GB/LC_MESSAGES/: io.github.maniacx.BudsLink.mo
locale/it/LC_MESSAGES/: io.github.maniacx.BudsLink.mo  io.github.maniacx.BudsLink.script.mo
po/: LINGUAS  af.po  ar.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  ca.po  ca@valencia.po  ckb.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  fy.po  ga.po  gd.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  io.github.maniacx.BudsLink.pot  is.po  it.po  ja.po  ka.po  kab.po  kk.po  (+31 more)
src/: app.js  io.github.maniacx.BudsLink.js  io.github.maniacx.BudsLink.src.gresource.xml  main.js  meson.build
src/appLibs/: pactlSubscriber.js  signalTracker.js  utils.js
src/appLibs/widgets/: batterySetWidget.js  checkButtonBin.js  circleBatteryIconWidget.js  colorHelpers.js  deviceRow.js  logWindow.js  optionsBox.js  radioButtonBin.js  settingsButton.js  sliderBin.js  toggleButtonsSet.js
src/lib/: enhancedDeviceSupportManager.js
src/lib/devices/: deviceUtils.js  logger.js  mediaController.js  profileManager.js  socketByProfile.js
src/lib/devices/airpods/: airpodsDevice.js  airpodsSocket.js
src/lib/devices/sony/: sonyDevice.js  sonySocketBase.js  sonySocketV1.js  sonySocketV2.js
src/lib/widgets/: iconGroups.js
src/preferences/devices/airpods/: configureWindow.js
src/preferences/devices/sony/: configureWindow.js
src/scriptLibs/: preChecks.js
src/scriptLibs/mockGsettings/: mockSettings.js
