project(
	'BudsLink',
	version: '0.1.0',
	license: ['GPL-3.0-or-later'],
	meson_version: '>= 0.61.0'
)

APP_NAME = 'BudsLink'
APP_ID = 'io.github.maniacx.BudsLink'
APP_COMMAND = 'budslink'
DESCRIPTION = 'Battery status and ANC control for Bluetooth earbuds'
gnome = import('gnome')
i18n = import('i18n')
subdir('data')
subdir('src')
subdir('po')

